<resources>
    <string name="app_name">Cindy\'s List</string>

    <!-- view_created_lists -->
    <!-- fragment_complete_list -->
    <!-- fragment_main -->
    <string name="list_name">List: %1$s</string>
    <string name="date_created">Created: %1$s</string>
    <string name="total_cost">Total: $ %1$s</string>
    <string name="total_num_items">Items: %1$s</string>
    <string name="finalize_list">Complete List</string>
    <string name="empty_set">There are no lists to be displayed</string>

    <!-- view_item  -->
    <string name="product">Product: </string>
    <string name="price">Price:</string>
    <string name="qty">Qty: </string>

    <!-- view_swipe_delete -->
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>

    <!-- view_swipe_added_list-->
    <string name="added_to_list">Added to list</string>

    <!-- view_swipe_transition_items -->
    <string name="check_from_list">Checked</string>

    <!--  view_item_create -->
    <string name="item_pic">Item Picture</string>

    <!-- menu_main  -->
    <string name="add_item">Add Product</string>
    <string name="update_list">Update List</string>
    <string name="action_settings">Settings</string>
    <string name="action_report">Report</string>

    <!-- Nav Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recipes">Recipes</string>
    <string name="products">Products</string>
    <string name="home">Home</string>


    <!-- dialog_universal  -->
    <string name="other">Other</string>
    <string name="univ_diag_hint_item">Product name</string>
    <string name="univ_diag_hint_list">List name</string>
    <string name="univ_diag_hin_category">Category name</string>
    <string name="univ_diag_new_category">New Category</string>
    <string name="univ_diag_add_item">Add a product</string>
    <string name="univ_diag_add_list">Give the list a name</string>
    <string name="univ_diag_generic_title">List %1$s</string>

    <!--  Activity Strings  -->
    <string name="create_list">Create A List</string>
    <string name="default_category">Fruits</string>

    <!-- generics -->
    <string name="holder">place holder</string>
    <string name="in_dev">In Development</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
